gitconfig: gpg, keepass template, diff-so-fancy

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,5 +1,5 @@
 [keepassxc]
-	database = "~/Sync/Documents/keepass/pw.kdbx"
+	database = "$HOME/Sync/Documents/keepass/pw.kdbx"
 [git]
 	autoCommit = false
 [diff]
