fix template syntax

--- a/dot_config/zsh/plugins/ai.zsh.tmpl
+++ b/dot_config/zsh/plugins/ai.zsh.tmpl
@@ -1,1 +1,1 @@
-export OPENAI_API_KEY="{{ (keepassxcAttribute 'ChatGPT' 'Password') }}"
+export OPENAI_API_KEY={{ (keepassxcAttribute "ChatGPT" "Password") }}
