--- a/dot_config/task/private_taskrc.tmpl
+++ b/dot_config/task/private_taskrc.tmpl
@@ -14,12 +14,9 @@
 
 # Use the command 'task show' to see all defaults and overrides
 
-# Files
-data.location=$HOME/.task
-
 sync.server.origin=https://tw.lxgreen.duckdns.org
 sync.server.client_id=68510b9b-fcbb-46c0-a997-a892a982c590
-sync.encryption_secret='{{ keepassxcAttribute "dot-task" "Password" }}'
+sync.encryption_secret={{ keepassxcAttribute "dot-task" "Password" }}
 
 # To use the default location of the XDG directories,
 # move this configuration file from ~/.taskrc to ~/.config/task/taskrc and uncomment below
