gitconfig secrets; wez: 0 transparency; fzf: completions

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,7 +1,7 @@
 [user]
-  signingkey = {{ keepassxcAttribute "dot-gpg" "Password" }}
-  name = {{ keepassxcAttribute "dot-github" "UserName" }}
-  email = {{ keepassxcAttribute "dot-github" "URL" }}
+  signingkey = {{ keepassxcAttribute "dot-gpg-mac-23" "Password" }}
+  name = {{ keepassxcAttribute "dot-gpg-mac-23" "UserName" }}
+  email = {{ keepassxcAttribute "dot-gpg-mac-23" "URL" }}
 [commit]
   gpgsign = true
 [gpg]
