task: prevent multiple recurrence trigger

--- a/dot_config/task/private_taskrc.tmpl
+++ b/dot_config/task/private_taskrc.tmpl
@@ -50,3 +50,4 @@ context.personal.read=project:Important or project:PDE
 context.personal.write=project:Important or project:PDE
 context.study.read=project:Study or project:xingyi
 context.study.write=project:Study or project:xingyi
+recurrence.limit=1
