install script + task
install script handles brew bash version - adds to /etc/shells
taskrc api change - server origin => url

--- a/dot_config/task/private_taskrc.tmpl
+++ b/dot_config/task/private_taskrc.tmpl
@@ -14,7 +14,7 @@
 
 # Use the command 'task show' to see all defaults and overrides
 
-sync.server.origin=https://tw.lxgreen.duckdns.org
+sync.server.url=https://tw.lxgreen.duckdns.org
 sync.server.client_id=68510b9b-fcbb-46c0-a997-a892a982c591
 sync.encryption_secret="{{ keepassxcAttribute "dot-task" "Password" }}"
 
