nvim: smart-open, help-ts; zsh: dynamic fzf theme in alias, completion and zk

--- a/dot_config/task/private_taskrc.tmpl
+++ b/dot_config/task/private_taskrc.tmpl
@@ -44,6 +44,7 @@ include ~/.config/task/themes/catppuccin.theme
 news.version=2.6.0
 urgency.user.project.Work.coefficient=5
 urgency.user.project.Important.coefficient=8
+urgency.user.project.xingyi.coefficient=10
 context.work.read=project:Work
 context.work.write=project:Work
 context.personal.read=project:Important or project:PDE
