vdirsyncer: fix syntax

--- a/dot_config/vdirsyncer/config.tmpl
+++ b/dot_config/vdirsyncer/config.tmpl
@@ -14,7 +14,7 @@ fileext = ".ics"
 
 [storage my_calendars_remote]
 type = "caldav"
-url = {{ keepassxcAttribute "fastmail-caldav" "URL" }}
-username = {{ keepassxcAttribute "fastmail-caldav" "UserName" }}
-password = {{ keepassxcAttribute "fastmail-caldav" "Password" }}
+url = "{{ keepassxcAttribute "fastmail-caldav" "URL" }}"
+username = "{{ keepassxcAttribute "fastmail-caldav" "UserName" }}"
+password = "{{ keepassxcAttribute "fastmail-caldav" "Password" }}"
 
