nvim: rename, escape; zsh: posh

--- a/Brewfile.tmpl
+++ b/Brewfile.tmpl
@@ -105,6 +105,7 @@ brew "httpie"
 brew "wget"
 brew "httrack"
 brew "spaceship" # prompt
+brew "jandedobbeleer/oh-my-posh/oh-my-posh"
 brew "tldr"
 brew "xclip"
 
@@ -162,3 +163,4 @@ brew "w3m"
 brew "zk" # zettelkasten
 brew "yazi", args: ["HEAD"]
 brew "eza"
+brew "television"
