fish: gpg config

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -225,6 +225,8 @@ set -q GIT_EDITOR; or set -Ux GIT_EDITOR $EDITOR
 
 set -gx OPENAI_API_KEY {{ (keepassxcAttribute "ChatGPT" "Password") }}
 
+set -x GPG_TTY (tty)
+
 # -- ABBRS -------------------------------------------------------------------------------------------------------------
 
 if status is-interactive
