brewfile: fish + deps

--- a/Brewfile.tmpl
+++ b/Brewfile.tmpl
@@ -164,3 +164,9 @@ brew "zk" # zettelkasten
 brew "yazi", args: ["HEAD"]
 brew "eza"
 brew "television"
+
+brew "fish" # shell
+brew "vivid" # colorizer
+cask "zed"	# text editor
+brew "asdf" # version manager
+brew "mise" # shell script manager
