fish: update fzf theme colors

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -141,14 +141,18 @@ if type -q fzf
     # https://github.com/catppuccin/fzf?tab=readme-ov-file#usage
     if [ $MACOS_IS_DARK = yes ]
         set -gx FZF_DEFAULT_OPTS " \
-		--color=bg+:#363a4f,bg:-1,spinner:#f4dbd6,hl:#ed8796 \
-		--color=fg:#cad3f5,header:#ed8796,info:#c6a0f6,pointer:#f4dbd6 \
-		--color=marker:#f4dbd6,fg+:#cad3f5,prompt:#c6a0f6,hl+:#ed8796"
+		--color=bg+:#313244,bg:#1e1e2e,spinner:#f5e0dc,hl:#f38ba8 \
+		--color=fg:#cdd6f4,header:#f38ba8,info:#cba6f7,pointer:#f5e0dc \
+		--color=marker:#b4befe,fg+:#cdd6f4,prompt:#cba6f7,hl+:#f38ba8 \
+		--color=selected-bg:#45475a \
+		--color=border:#313244,label:#cdd6f4"
     else
         set -gx FZF_DEFAULT_OPTS " \
-		--color=bg+:#ccd0da,bg:-1,spinner:#dc8a78,hl:#d20f39 \
+		--color=bg+:#ccd0da,bg:#eff1f5,spinner:#dc8a78,hl:#d20f39 \
 		--color=fg:#4c4f69,header:#d20f39,info:#8839ef,pointer:#dc8a78 \
-		--color=marker:#dc8a78,fg+:#4c4f69,prompt:#8839ef,hl+:#d20f39"
+		--color=marker:#7287fd,fg+:#4c4f69,prompt:#8839ef,hl+:#d20f39 \
+		--color=selected-bg:#bcc0cc \
+		--color=border:#ccd0da,label:#4c4f69"
     end
 
     set -gx FZF_DEFAULT_OPTS "$FZF_DEFAULT_OPTS --reverse --height '90%'"
