brew: add pinentry-mac; gpg: config added

--- a/Brewfile.tmpl
+++ b/Brewfile.tmpl
@@ -17,6 +17,7 @@ brew "svim"
 brew "borders"
 brew "trash"
 brew "reattach-to-user-namespace"
+brew "pinentry-mac" # secure PIN or passphrase entry dialog for GPG
 
 cask "wezterm"
 cask "keepassxc"
