aerospace, fish, cursor
- aerospace: Cursor on Workspace 8
- fish: whisper path
- cursor: mcp settings added

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -439,3 +439,7 @@ fish_config theme choose $CATPPUCCIN_FLAVOR
 # -- NODE & NPM via FNM -----------------------------------------------------------------------------------------------
 
 fnm env --use-on-cd --shell fish | source
+
+### MANAGED BY RANCHER DESKTOP START (DO NOT EDIT)
+set --export --prepend PATH "/Users/alexgr/.rd/bin"
+### MANAGED BY RANCHER DESKTOP END (DO NOT EDIT)
