--- a/dot_cursor/mcp.json.tmpl
+++ b/dot_cursor/mcp.json.tmpl
@@ -5,7 +5,7 @@
       "args": [
         "-y",
         "figma-developer-mcp",
-        "--figma-api-key={{ (keepassxcAttribute "figma-api" "Password") }}
+        "--figma-api-key={{ (keepassxcAttribute \"figma-api\" \"Password\") }}",
         "--stdio"
       ]
     },
@@ -27,7 +27,7 @@
         "mcp/github"
       ],
       "env": {
-        "GITHUB_PERSONAL_ACCESS_TOKEN": {{ (keepassxcAttribute "github cursor token" "Password") }}
+        "GITHUB_PERSONAL_ACCESS_TOKEN": "{{ (keepassxcAttribute \"github cursor token\" \"Password\") }}"
       }
     }
   }
