--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -222,6 +222,8 @@ set -q GIT_EDITOR; or set -Ux GIT_EDITOR $EDITOR
 # -- SECRETS -----------------------------------------------------------------------------------------------------------
 
 set -gx OPENAI_API_KEY {{ (keepassxcAttribute "ChatGPT" "Password") }}
+set -gx TAVILY_API_KEY {{ (keepassxcAttribute "Tavily" "Password") }}
+set -gx ANTHROPIC_API_KEY {{ keepassxcAttribute "Anthropic" "Password" }}
 
 set -x GPG_TTY (tty)
 
