nvim, aerospace, cursor, git
- nvim: avante, mcphub, bindings
- aerospace: offset top 32
- cursor: wix mcp
- git: http timeout

--- a/dot_cursor/mcp.json.tmpl
+++ b/dot_cursor/mcp.json.tmpl
@@ -1,5 +1,13 @@
 {
   "mcpServers": {
+		"wix-mcp": {
+			"command": "npx",
+			"args": [
+				"-y",
+				"mcp-remote",
+				"https://public-mcp-remote-server.dorch.workers.dev/sse"
+			]
+		},
     "figma": {
       "command": "npx",
       "args": [
