nvim ghostty fish zsh wezterm
- nvim: +debugprint, update avante api
- fish+zsh: astra setup

--- a/Brewfile.tmpl
+++ b/Brewfile.tmpl
@@ -171,3 +171,5 @@ brew "vivid" # colorizer
 cask "zed"	# text editor
 brew "asdf" # version manager
 brew "mise" # shell script manager
+
+brew "scala@2.12" # required for astra
