--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -410,6 +410,8 @@ if status is-interactive
 
     # Clipboard to Markdown -- copy Slack messages to Notes interatively
     alias cm "open ~/dev/clipboard2markdown/index.html"
+
+    alias astra "zsh -i -l -c 'astra'"
 end
 
 # -- EZA --------------------------------------------------------------------------------------------------------------
