--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -155,7 +155,14 @@ if type -q fzf
 		--color=border:#ccd0da,label:#4c4f69"
     end
 
-    set -gx FZF_DEFAULT_OPTS "$FZF_DEFAULT_OPTS --reverse --height '90%'"
+    set -gx FZF_DEFAULT_OPTS "$FZF_DEFAULT_OPTS --reverse --height '100%' \
+        --bind ctrl-b:preview-up,ctrl-f:preview-down \
+        --bind ctrl-u:preview-half-page-up,ctrl-d:preview-half-page-down \
+        --bind 'ctrl-/:change-preview-window(hidden|)' \
+        --bind 'ctrl-e:execute(nvim {})' \
+        --walker-skip .git,node_modules \
+        --preview-window 'right:60%' \
+        --multi"
     set -gx FZF_DEFAULT_COMMAND "fd --type f --strip-cwd-prefix --hidden --follow"
     set -gx FZF_CTRL_T_COMMAND "$FZF_DEFAULT_COMMAND"
     set -gx FZF_CTRL_T_OPTS "--preview 'bat -n --color=always {}' --bind 'ctrl-/:change-preview-window(hidden|)'"
@@ -234,6 +241,14 @@ set -gx PINECONE_INDEX_NAME Personal
 set -gx PINECONE_API_KEY {{ (keepassxcAttribute "pinecone" "Password") }}
 
 set -x GPG_TTY (tty)
+
+# -- PYTHON ------------------------------------------------------------------------------------------------------------
+
+set -Ux PYENV_ROOT $HOME/.pyenv
+set -U fish_user_paths $PYENV_ROOT/bin $fish_user_paths
+
+# Load pyenv automatically by appending
+pyenv init - fish | source
 
 # -- ABBRS -------------------------------------------------------------------------------------------------------------
 
